--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Petriolese — Matchday (3-4-1-2)</title>
+<title>Petriolese — Matchday</title>
 <meta name="theme-color" content="#0b0f0c">
 <link rel="preconnect" href="https://docs.google.com">
 <link rel="dns-prefetch" href="https://docs.google.com">
@@ -70,7 +70,6 @@
 
     <aside class="side">
       <div class="card">
-        <div class="title">Panchina (12–20 + ALL)</div>
         <div class="bench" id="bench"></div>
         <div class="notice" id="notice">Carico i dati…</div>
       </div>
