--- a/index.html
+++ b/index.html
@@ -21,9 +21,24 @@
   .brand{display:flex;align-items:center;gap:10px}
   .brand img{width:42px;height:42px;object-fit:contain}
   .brand .club{font-weight:900;letter-spacing:.3px}
-  .matchline{font-weight:800;text-transform:uppercase;text-align:right}
+  .matchline{display:none} /* nascondo la riga duplicata */
   .subline{font-size:12px;color:var(--muted)}
   @media (max-width:520px){.matchline{font-size:14px}}
+
+  /* ===== Frontespizio ===== */
+  .frontespizio{ text-align:center; margin:28px 0 20px; }
+  .frontespizio h1{
+    font-size:48px; font-weight:900; margin:0 0 16px; color:#fff; letter-spacing:2px;
+  }
+  .frontespizio .matchup{
+    display:flex; justify-content:center; align-items:center; gap:14px; flex-wrap:wrap;
+    font-size:26px; font-weight:900;
+  }
+  .frontespizio .matchup img{ height:64px; width:auto; }
+  .frontespizio .red{ color:var(--club-red); }
+  .frontespizio .blue{ color:var(--club-blue); }
+  .frontespizio .vs{ font-size:32px; font-weight:900; }
+  /* ======================== */
 
   .wrap{min-height:100svh;display:grid;place-items:start center;padding:8px 16px calc(16px + env(safe-area-inset-bottom))}
   .board{display:grid;gap:16px;grid-template-columns:1fr;width:100%;max-width:960px}
@@ -63,6 +78,19 @@
   </div>
 </header>
 
+<!-- ===== Frontespizio MATCHDAY ===== -->
+<div class="frontespizio">
+  <h1>MATCHDAY</h1>
+  <div class="matchup">
+    <img src="CLAUDIO LOGO.jpg" alt="Logo Petriolese">
+    <span class="red">PETRIOLESE</span>
+    <span class="blue">CALCIO</span>
+    <span class="vs"><span class="red">V</span><span class="blue">S</span></span>
+    <span id="frontOpponent">AVVERSARIO</span>
+  </div>
+</div>
+<!-- ================================= -->
+
 <main class="wrap">
   <section class="board">
     <div class="pitch" id="pitch">
@@ -80,14 +108,9 @@
 
 <script>
   /* ====== CONFIG ====== */
-  // 1) metti qui il FILE_ID reale dello Spreadsheet (URL in modifica: /spreadsheets/d/FILE_ID/edit)
   const SHEET_FILE_ID = '1nWG0OBGpiyK-lulP-OKGad4jG7uEVmcy';  // <- SOSTITUISCI
-
-  // 2) i gid sono quelli che già usi
   const META_GID = '254048258';
   const DIST_GID = '116187224';
-
-  // 3) tieni anche le URL "pubhtml" come backup (le tue)
   const PUBLISHED_META_URL =
     'https://docs.google.com/spreadsheets/d/e/2PACX-1vSpJqXmoJaIznEo_EGHCfUxyYVWWKJCGULM9FbnI14hLhGpsjt3oMHT5ahJwEmJ4w/pubhtml?gid=254048258&single=true';
   const PUBLISHED_DIST_URL =
@@ -104,7 +127,6 @@
 
   const el = s => document.querySelector(s);
 
-  /* ====== COSTRUTTORI URL ====== */
   function gvizJsonURL(fileId, gid){
     return `https://docs.google.com/spreadsheets/d/${fileId}/gviz/tq?gid=${encodeURIComponent(gid)}&headers=1&tqx=out:json`;
   }
@@ -120,7 +142,6 @@
     return `${root}/pub?gid=${encodeURIComponent(u.searchParams.get('gid')||'0')}&single=true&output=csv`;
   }
 
-  /* ====== PARSER ====== */
   function parseCSV(text){
     let t = String(text||'').replace(/^\uFEFF/, '').replace(/\r\n?/g, '\n');
     while (t.startsWith('\n')) t = t.slice(1);
@@ -155,7 +176,6 @@
   }
 
   function parseGVizJSON(text){
-    // risposta tipo: google.visualization.Query.setResponse({...});
     const start = text.indexOf('{');
     const end   = text.lastIndexOf('}');
     if (start<0 || end<0) throw new Error('JSON GViz non trovato');
@@ -171,12 +191,10 @@
     return rows;
   }
 
-  /* ====== FETCH con 4 tentativi ====== */
   async function fetchRows(metaOrDist){
     const gid = (metaOrDist==='meta') ? META_GID : DIST_GID;
     const pub = (metaOrDist==='meta') ? PUBLISHED_META_URL : PUBLISHED_DIST_URL;
 
-    // 1) GViz JSON (richiede FILE_ID)
     if (SHEET_FILE_ID && SHEET_FILE_ID !== 'INSERISCI_QUI_FILE_ID'){
       try{
         const res = await fetch(gvizJsonURL(SHEET_FILE_ID, gid), {cache:'no-store'});
@@ -185,7 +203,6 @@
         const rows = parseGVizJSON(txt);
         if (rows.length){ console.log('OK GViz JSON', metaOrDist, rows.length); return rows; }
       }catch(e){ console.warn('Fallback a GViz CSV:', e.message); }
-      // 2) GViz CSV
       try{
         const res = await fetch(gvizCsvURL(SHEET_FILE_ID, gid), {cache:'no-store'});
         if (!res.ok) throw new Error('GViz CSV '+res.status);
@@ -195,7 +212,6 @@
       }catch(e){ console.warn('Fallback a pub CSV:', e.message); }
     }
 
-    // 3) CSV “pub”
     try{
       const res = await fetch(pubCsvURL(pub), {cache:'no-store'});
       if (!res.ok) throw new Error('PUB CSV '+res.status);
@@ -204,7 +220,6 @@
       if (rows.length){ console.log('OK PUB CSV', metaOrDist, rows.length); return rows; }
     }catch(e){ console.warn('Fallback a pubhtml:', e.message); }
 
-    // 4) pubhtml → parse tabella
     const htmlRes = await fetch(pub, {cache:'no-store'});
     if (!htmlRes.ok) throw new Error('PUBHTML '+htmlRes.status);
     const html = await htmlRes.text();
@@ -229,7 +244,6 @@
     return out;
   }
 
-  /* ====== NORMALIZZAZIONE ====== */
   function normalizeMeta(rows){
     const out={};
     if (!rows || !rows.length) return out;
@@ -283,7 +297,6 @@
   }
   const surname = full => { const t=String(full||'').trim(); if(!t) return ''; const p=t.split(/\s+/); return p[p.length-1]; };
 
-  /* ====== ANTI-OVERLAP ====== */
   function distributeNoOverlap(){
     const pitch = el('#pitch');
     const rect = pitch.getBoundingClientRect();
@@ -325,14 +338,14 @@
     });
   }
 
-  /* ====== RENDER ====== */
   function renderAll(meta, byNum){
     const opp = meta['avversario'] || 'AVVERSARIO';
     const when= meta['when'] || meta['data'] || '';
     const logoURL = meta['logourl'] || '';
     el('#clubLogo').src=logoURL||'CLAUDIO LOGO.jpg';
-    el('#matchLine').textContent=`PETRIOLESE vs ${opp}`;
+    el('#matchLine').textContent=`PETRIOLESE vs ${opp}`; // rimane nascosto
     el('#matchWhen').textContent=when;
+    const oppNode = el('#frontOpponent'); if (oppNode) oppNode.textContent = opp;
     if(meta['pitchurl']) el('#pitchImg').src=meta['pitchurl'];
 
     const pitch=el('#pitch'); pitch.querySelectorAll('.player').forEach(n=>n.remove());
@@ -368,21 +381,14 @@
     requestAnimationFrame(distributeNoOverlap);
   }
 
-  /* ====== INIT ====== */
   (async function init(){
     try{
       const [metaRows,distRows]=await Promise.all([
         fetchRows('meta'),
         fetchRows('dist')
       ]);
-      console.log('META rows:', metaRows?.length, metaRows?.[0]);
-      console.log('DIST rows:', distRows?.length, distRows?.[0]);
-
       const meta=normalizeMeta(metaRows);
       const byNum=normalizeDistinta(distRows);
-      console.log('META parsed:', meta);
-      console.log('DIST map size:', byNum.size);
-
       renderAll(meta,byNum);
       window.addEventListener('resize', ()=>requestAnimationFrame(distributeNoOverlap));
     }catch(e){
